@@ -1,4 +1,8 @@
 2004-01-24  Damien McGinnes <mcginnes at netspeed dot com.au>
+	* Mercator/Forest.h, Mercator/Forest.cpp: make forest use
+	  RandCache.
+
+2004-01-24  Damien McGinnes <mcginnes at netspeed dot com.au>
 	* Mercator/RandCache.h: add code to provide a pool of repeatable
 	  (2d indexed) random numbers for use by Forest etc.
 	  thanks to rsteinke.
